Went back to using ellipses for school names that overflow their span in the nav bar (to fix vertical alignment).

--- a/app/assets/stylesheets/proui_overwrite.css.less
+++ b/app/assets/stylesheets/proui_overwrite.css.less
@@ -219,7 +219,7 @@ ul.sidebar-nav li#side-current ul.subsections {
 }
 
 #head-current-school {
-    max-width: 270px;
+    max-width: 260px;
 }
 
 #head-user-dropdown {
@@ -250,13 +250,12 @@ ul.sidebar-nav li#side-current ul.subsections {
 }
 
 #head-current-school .navbar-nav-custom-content {
-    line-height: 100%;
     height: 50px;
-    padding: 10px 8px;
+    padding: 0px 8px;
+    line-height: 50px;
+    overflow: hidden;
 
     .text-muted {
-      line-height: 120%;
-      max-width: 270px;
       display: inline-block;
       overflow: hidden;
       white-space: nowrap;
@@ -266,10 +265,12 @@ ul.sidebar-nav li#side-current ul.subsections {
 
 .navbar-nav-custom-content .text-muted:nth-child(-n+2) {
   font-size: 90%;
+  max-width: 170px;
 }
 
 .navbar-nav-custom-content :nth-child(n+4) {
   font-size: 70%;
+  max-width: 120px;
 }
 
 #breadcrumb-flash {
